[package]
name = "unrparc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unrparc"
path = "src/lib.rs"

[[bin]]
name = "unrparc"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde-pickle = "1.1"
flate2 = "1.0.28"
wax = "0.6.0"
