[package]
name = "unrparc"
version = "0.1.90"
edition = "2021"
authors = ["Ilya Kremniou <i@kremniou.ru"]
description = "A simple CLI tool to uncompress the '.rpa' archive used in Renpy, written in Rust"
license = "MIT"
repository = "https://github.com/kremniou/unrparc"
categories = ["rpa", "cli", "renpy", "uncompress", "archive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unrparc"
path = "src/lib.rs"

[[bin]]
name = "unrparc"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde-pickle = "1.1"
flate2 = "1.0.28"
wax = "0.6.0"
clap = { version = "4.4", features = ["derive"] }
